--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -322,7 +322,7 @@
             "resolve_prediction": "Resolve prediction",
             "resolve_prediction_text": "The asset prediction can be resolved here.",
             "reward_percent": "Reward percent",
-            "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
+            "reward_percent_tooltip": "The market fee sharing indicates the reward percentage for the referral program, instead of only benefitting the asset owner.",
             "short": "Short name (max 32 characters)",
             "symbol": "Symbol",
             "to": "Issue to account",
@@ -439,7 +439,7 @@
     },
     "account_browsing_mode": {
         "go_back": "Go back to my account",
-        "modal_description": "You're switching an account which you don't have active authority over. You can browse this account, but in view only mode",
+        "modal_description": "You're switching to an account which you don't have active authority over. You can browse this account, but in view only mode",
         "modal_title": "View Only Mode",
         "never_show_again": "Never show again",
         "view_mode": "View Mode",
@@ -497,7 +497,7 @@
         "no_valid": "No valid feeds for %(asset_symbol)s",
         "pay_max_debt": "Pay Max Debt",
         "target_collateral_ratio": "Target Collateral Ratio",
-        "target_collateral_ratio_explanation": "When the position is being margin called, the corresponding order will be just big enough to bring the collateral ratio of the position greater or equal to the target collateral ratio",
+        "target_collateral_ratio_explanation": "The corresponding order for a margin call will be just big enough, to bring the collateral ratio to target ratio",
         "target_collateral_ratio_short": "TCR",
         "title": "%(asset_symbol)s Margin",
         "update": "Update",
@@ -643,8 +643,8 @@
             "higher_than": "Higher Than",
             "lower_than": "Lower Than",
             "notification": {
-                "higher_than": "The price of %(pair)s rose higher than %(expectedPrice)s and now is %(actualPrice)s",
-                "lower_than": "The price of %(pair)s fell lower than %(expectedPrice)s and now is %(actualPrice)s"
+                "higher_than": "The price of %(pair)s rose higher than %(expectedPrice)s and is now %(actualPrice)s",
+                "lower_than": "The price of %(pair)s fell lower than %(expectedPrice)s and is now %(actualPrice)s"
             },
             "price": "Price",
             "title": "Price Alert",
@@ -685,8 +685,8 @@
                 "grouping_standalone": "Standalone",
                 "hidden_chart": "Hide chart",
                 "horizontal": "Horizontal",
-                "position_order_asset_opt1": "Orders above Asset",
-                "position_order_asset_opt2": "Asset above Order",
+                "position_order_asset_opt1": "Orderbook above Orderform",
+                "position_order_asset_opt2": "Orderform above Orderbook",
                 "position_order_form_opt1": "Buy - Sell",
                 "position_order_form_opt2": "Sell - Buy",
                 "position_order_orders_opt1": "Buy - Sell",
@@ -729,7 +729,7 @@
                 "open_orders": "",
                 "order_book_grouping": "Group orders which are close together by a defined percentage",
                 "order_style": "Use vertical order book to pin it to the side panel",
-                "orderbook_auto_scroll": "Auto scroll the order book to keep center as new orders come in. Disable to allow scrolling",
+                "orderbook_auto_scroll": "Auto scroll orderbook for new orders. Disable to allow scrolling",
                 "panel_grouping": "Define panel grouping",
                 "position_order_asset": "Define the vertical order for the order form vs order book",
                 "position_order_form": "Define the horizontal order for the order form",
@@ -889,7 +889,7 @@
                 "gs_or": "or",
                 "gs_place_bid": "click here to place a bid",
                 "gs_revert": "Reviving",
-                "gs_revive": "Asset will be revived automatically if auto revive price (bids included) is greater than feed price or all debt is force settled",
+                "gs_revive": "Asset will be revived automatically if feed price is greater than auto revive price (bids included) or all debt is force settled",
                 "gs_see_actions": "see Asset actions",
                 "max_settle_volume": "Max. settlement volume each maintenance period",
                 "offset": "offset included",
