--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1096,6 +1096,29 @@
         "unsynced": "Out of sync",
         "update_available": "UPDATE AVAILABLE"
     },
+    "external_service_provider": {
+        "selector": {
+            "use_selected": "Use selected",
+            "use_none": "Use none",
+            "title": "Choose your preferred Service Providers",
+            "table_description": "The table below lists all Gateways and Bridges that are currently integrated with the BitShares UI, this does not reflect any kind of endorsement. It lists the Name (sorted alphabetically), the type (Bridge or Gateway, and if Gateway the asset prefix, e.g. RUDEX.BTC), a link to their landing page with further information and an affiliate link to the Gateways wallet (if exists, usually a branded version of this UI). Please do your own due dilligence.",
+            "name": "Name",
+            "landing": "Landing Page",
+            "wallet": "Wallet",
+            "type": "Type"
+        },
+        "gateway": {
+            "short": "Gateway",
+            "what_is": "What is a Gateway?",
+            "prefix": "Prefix",
+            "description": "Gateways are external service providers that allow you to deposit, trade and withdraw assets into the BitShares Blockchain that are not native to it. For example, you can send your BTC on the Bitcoin Blockchain to a Gateway, who will in turn give you an UIA (user issued asset) on the BitShares Blockchain, with the promise that you can withdraw it again (for a fee of course). While you are holding such an UIA on the BitShares Blockchain, the Gateway becomes the custodian of your funds. As it is external service providers you implicitly agree to their Terms and Conditions by using any of their services or assets."
+        },
+        "bridge": {
+            "short": "Bridge",
+            "what_is": "What is a Bridge?",
+            "description": "Bridges are external service providers that allow you to swap assets in and out of the BitShares Blockchain. For example, you can send your BTC on the Bitcoin Blockchain to a Bridge, who will swap it and give you an equivalent amount of BTS or another Gateways UIA on the BitShares Blockchain (for a fee of course). Normally, a Bridge does not hold your funds, but trust is required that they send you back the proper amount of the target asset. As it is an external service providers you implicitly agree to their Terms and Conditions by using any of their services or assets."
+        }
+    },
     "gateway": {
         "add_funds": "Quickly and easily add funds to your %(wallet_name)s account <strong>%(account)s</strong>. This service is provided by Openledger.",
         "address": "Address",
@@ -2080,6 +2103,7 @@
         "scrollbars_hide": "Reduce scroll bars",
         "show": "Show",
         "showAssetPercent": "Show asset percentages on the account page",
+        "filteredServiceProviders": "External service providers (Gateways, Bridges)",
         "showProposedTx": "Show proposed transactions in dashboard",
         "showSettles": "Show settle orders in depth chart",
         "skipped": "Skipped",
